--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.68",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "fabric": "^5.3.0",
+    "html-to-image": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
+    "react-to-print": "^3.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
